fixed #78 and also fixed the issue of not going full view
Error message container was out of view due to missing top and left CSS
properties.

--- a/sources/sass/sbplus.scss
+++ b/sources/sass/sbplus.scss
@@ -466,6 +466,8 @@ body {
                         padding: 10px;
                         z-index: 2;
                         background-color: rgba( 0,0,0, 0.5 );
+                        top: 0;
+                        left: 0;
                         
                         p {
                             margin-bottom: 10px;
